# Snake

./: CMakeLists.txt
include/: client.h  game_logic.h  ipc.h  server.h
src/: client.c  game_logic.c  ipc.c  main.c  main_client.c  main_game.c  main_server.c  server.c
